--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,7 @@
   <meta charset="UTF-8">
   <title>Список дипломних проектів</title>
   <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+<!--  <link rel="stylesheet" href="../static/css/bootstrap.min.css">-->
 </head>
 
 <body>
@@ -88,24 +88,24 @@
         <table>
           <tr>
             <td>ПІБ курсанта:</td>
-            <td><input type="text" :field="*{name}" name="name"> </td>
+            <td><input type="text"  name="studentName"> </td>
           </tr>
           <tr>
             <td>Назва дипломного проекту:</td>
-            <td><input type="text" :field="*{diploma}" name="diploma"></td>
+            <td><input type="text"  name="projectName"></td>
           </tr>
           <tr>
             <td>Рецензент:</td>
-            <td><input type="text" :field="*{recez}" name="recez"></td>
+            <td><input type="text"  name="reviewer"></td>
           </tr>
           <tr>
             <td>Рік:</td>
-            <td><input type="text" :field="*{year}" name="year"></td>
+            <td><input type="number"  name="year"></td>
           </tr>
-          
+
           <tr>
             <td>Керівник:</td>
-            <td><input type="text" :field="*{recez}" name="recez"></td>
+            <td><input type="text"  name="supervisor"></td>
           </tr>
 
           <tr>
@@ -125,38 +125,23 @@
                  <th>Рецензент        </th>
                  <th>Рік           </th>
                  <th>Керівник </th>
-              
+
           </tr>
         </thead>
-        <tbody>
-          <tr th:each="diploma : ${diploms}">
-            <td th:text="${diploma.}">gsdgdsg</td>
-            <td th:text="${diploma.}">gsdgsdg</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-          </tr>
-          <tr th:each="diploma : ${diploms}">
-            <td th:text="${diploma.}">gsdgdsg</td>
-            <td th:text="${diploma.}">gsdgsdg</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-          </tr>
-          <tr th:each="diploma : ${diploms}">
-            <td th:text="${diploma.}">gsdgdsg</td>
-            <td th:text="${diploma.}">gsdgsdg</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-            <td th:text="${diploma.}">gdsgsdgsd</td>
-
-          </tr>
+        <tbody th:if="${#lists.size(diplomas)==0}">
+        <p>There are not data in list</p>
         </tbody>
+        <tbody th:else >
+        <tr th:each="diploma : ${diplomas}">-->
+              <td th:text="${diploma.studentName}"></td>
+              <td th:text="${diploma.projectName}"></td>
+              <td th:text="${diploma.reviewer}"></td>
+              <td th:text="${diploma.year}"></td>
+              <td th:text="${diploma.supervisor}"></td>
+        </tr>
+
+        </tbody>
+
       </table>
     </div>
   </div>
